{
    "name": "MainMenuInputActions",
    "maps": [
        {
            "name": "Navigation",
            "id": "0d9353be-f0e1-440f-b771-ff216035325a",
            "actions": [
                {
                    "name": "UpSwitch",
                    "type": "Button",
                    "id": "c25f869e-a5f0-4f14-868d-a2f707df208d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownSwitch",
                    "type": "Button",
                    "id": "d5af1dc9-a2b1-4b9a-94c0-7f2efaa69fd5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressButton",
                    "type": "Button",
                    "id": "f1dea11b-3f7a-4ca6-a2d8-dda727774357",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "faa0c548-6528-4364-871f-4b66d2b833cb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94f64962-765e-41aa-b8e0-1a8b0df2e8d9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09348631-38b8-4c87-8f9c-52af1c6c4dce",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a64fb2e8-e122-4182-a6e4-e2e7ff08c348",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76fa8b4a-3513-410e-80b3-0a66fc4f1b7c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bb4270f-6913-42ab-bb8a-756d7b75a00d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}